--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ openai==1.13.3
 pydantic==2.6.3
 pydantic_core==2.16.3
 python-dotenv==1.0.1
+python-telegram-bot==21.0.1
 pytube==15.0.0
 requests==2.31.0
 sniffio==1.3.1
